--- a/index.html
+++ b/index.html
@@ -76,9 +76,19 @@
 <body>
     <h1>Create Your Mashup</h1>
     <div>
-    <form method="POST" action="" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
+    <form action="/action_page.php">
+        <label for="singer">Singer Name</label>
+        <input type="text" id="singer" name="singer">
+
+        <label for="weight">Number of Videos</label>
+        <input type="text" id="novideos" name="novideos" min="10">
+
+        <label for="imapct">Duration of each video</label>
+        <input type="text" id="duration" name="duration" min="20">
+
+        <label for="email">Email Address</label>
+        <input type="email" id="email" name="email">
+
         <button type="submit">Create</button>
     </form>
     </div>
