--- a/index.html
+++ b/index.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Topsis-102003030</title>
+    <title>Mashup-Mritunjay-102003030</title>
     <style>
         h1{
             display:block;
@@ -76,47 +76,37 @@
 <body>
     <h1>Create Your Mashup</h1>
     <div>
-    <form action="/action_page.php">
+    <form action="index.html" method="POST" onsubmit="return false;">
         <label for="singer">Singer Name</label>
-        <input type="text" id="singer" name="singer">
+        <input type="text" id="singer" name="singer" required>
 
         <label for="weight">Number of Videos</label>
-        <input type="text" id="novideos" name="novideos" min="10">
+        <input type="number" id="novideos" name="novideos" required min="10" >
 
         <label for="imapct">Duration of each video</label>
-        <input type="text" id="duration" name="duration" min="20">
+        <input type="number" id="duration" name="duration" required min="20">
 
         <label for="email">Email Address</label>
-        <input type="email" id="email" name="email">
-
-        <button type="submit">Create</button>
+        <input type="email" id="email" name="email" required>
+        <button type="submit" value="submit">Create</button>
+        <script>
+            let form = document.getElementsByTagName("form")[0];
+            form.addEventListener("submit", (e) => {
+            e.preventDefault();
+            alert("!!Your Mashup creation has started and will be mailed shortly!!");
+            });
+            function check(){
+                field = document.getElementById("novideos");
+            if (!field.checkValidity()) {
+                error += "Number must be greater than 10\r\n";
+            }
+            field = document.getElementById("duration");
+            if (!field.checkValidity()) {
+                error += "Number must be greater than 20\r\n";
+            }
+            }
+        </script>
     </form>
     </div>
 </body>
 </html>
-
-<!-- <!doctype html>
-<html lang="en">
-
-<head>
-    <meta charset="utf-8">
-    <meta name="viewport" content="width=device-width, initial-scale=1">
-    <title>Topsis Calculator</title>
-    <link href="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/css/bootstrap.min.css" rel="stylesheet"
-        integrity="sha384-GLhlTQ8iRABdZLl6O3oVMWSktQOp6b7In1Zl3/Jr59b6EGGoI1aFkw7cmDA6j6gD" crossorigin="anonymous">
-</head>
-
-<body>
-    <div class="form-group">
-        <form method="POST" action="" enctype="multipart/form-data">
-            {% csrf_token %}
-            {{ form.as_p }}
-            <button type="submit">Calculate</button>
-        </form>
-    </div>
-    <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.3.0-alpha1/dist/js/bootstrap.bundle.min.js"
-        integrity="sha384-w76AqPfDkMBDXo30jS1Sgez6pr3x5MlQ1ZAGC+nuZB+EYdgRZgiwxhTBTkF7CXvN"
-        crossorigin="anonymous"></script>
-</body>
-
-</html> -->
