--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 <body>
     <h1>Create Your Mashup</h1>
     <div>
-    <form action="index.html" method="POST" onsubmit="return false;">
+    <form action="index.html" method="POST" onsubmit="return check()" novalidate">
         <label for="singer">Singer Name</label>
         <input type="text" id="singer" name="singer" required>
 
